Closed
Bug 1163570
Opened 10 years ago
Closed 10 years ago
[e10s] Flash Player content appears on top of firefox tabs like the New Tab Page, Options, Customize and the Add-ons Manager
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(e10sm8+, firefox43 fixed)
RESOLVED
FIXED
mozilla43
People
(Reporter: u538779, Assigned: jimm)
References
()
Details
(Keywords: flashplayer)
Attachments
(5 files, 2 obsolete files)
User Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64; rv:40.0) Gecko/20100101 Firefox/40.0
Build ID: 20150510030207
Steps to reproduce:
1-go to pingtest.net
2-click on plugin
3-go to firefox customization page
Actual results:
4-plugin stays on to front even though tabs switched
Expected results:
i dont know but at least it shouldnt stay i guess? :/ sorry i am kind of new, this is my first bug. but i really been following this latest bugzilla bugfixes for almost a year :)
reproduced scenario video is available at attachment:
Updated•10 years ago
|
Component: Untriaged → Plug-ins
Keywords: flashplayer
Product: Firefox → Core
Summary: some flash pages bugs firefox customization page → [e10s?] Flash Player content appears on top of the Customize Firefox tab
Comment 1•10 years ago
|
||
Shockwave Flash 17.0.0.169
Works:
Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:39.0) Gecko/20100101 Firefox/39.0
Build ID: 20150511004005
Fails:
Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:40.0) Gecko/20100101 Firefox/40.0
Build ID: 20150510030207
Flash Player won't work in a Nightly non-e10s window (Nightly reports it's disabled though it's not), and I can't seem to enable e10s in FDE. So I can't tell if this is e10s-related or a regular regression.
Attachment #8604059 -
Attachment is obsolete: true
Updated•10 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•10 years ago
|
||
> Flash Player won't work in a Nightly non-e10s window
This is by design :(
See, Bug 1158270 Comment 5.
> I can't tell if this is e10s-related or a regular regression.
I can reproduce the problem on windows7 with e10s enabled
However, I cannot reproduce with e10s disabled.
So, this is definitely only e10s.
tracking-e10s:
--- → ?
Summary: [e10s?] Flash Player content appears on top of the Customize Firefox tab → [e10s] Flash Player content appears on top of the Customize Firefox tab
Updated•10 years ago
|
Comment 3•10 years ago
|
||
Ran into the same issue while watching some MLS games today. While I was watching the game, I quickly switched tabs and the video spilled over to the next tab. It doesn't always happen, but it's pretty easy to reproduce. Once I disabled e10s, I couldn't reproduce the issue anymore.
- attached two screenshots to illustrate the issue
Used the following STR:
- logged into http://live.mlssoccer.com
- selected a game and started playing it
- once it started playing, quickly switched the tabs and the video spilled over to about:newtab & about:preferences
Plugin Info:
File: NPSWF32_17_0_0_188.dll
Path: C:\WINDOWS\SysWOW64\Macromed\Flash\NPSWF32_17_0_0_188.dll
Version: 17.0.0.188
State: Enabled
Shockwave Flash 17.0 r0
Comment 4•10 years ago
|
||
so it basically doesn't only occurs on customize firefox tab, but pretty much every tab belongs to firefox. can anybody update the title according to problem? im not good at language
Comment 6•10 years ago
|
||
Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:41.0) Gecko/20100101 Firefox/41.0
Build ID: 20150524030234
Shockwave Flash 17.0.0.188
I can't seem to reproduce this when hardware acceleration is disabled under Options → Advanced → General.
Summary: [e10s] Flash Player content appears on top of the Customize Firefox tab → [e10s] Flash Player content appears on top of chrome tabs like the New Tab Page, Options, Customize and the Add-ons Manager
Summary: [e10s] Flash Player content appears on top of chrome tabs like the New Tab Page, Options, Customize and the Add-ons Manager → [e10s] Flash Player content appears on top of firefox tabs like the New Tab Page, Options, Customize and the Add-ons Manager
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → jmathies
| Assignee | ||
Comment 8•10 years ago
|
||
The customize view triggers weird timing here, we end up with pending plugin updates (mUpdatedPluginDataAvailable is true) while GetParent() is null. Once we get stuck in that situation we never update mUpdatedPluginDataAvailable so we never hide plugin windows. This only happens about 50 percent of the time, and depends on when the final plugin update comes in. It's also specific to customize, new tab doesn't trigger it, the timing is just different.
This patch fixes the problem, and doesn't regress any previous issues I've run into.
Attachment #8649480 -
Flags: review?(roc)
| Assignee | ||
Comment 9•10 years ago
|
||
STR:
1) open a simple windowed flash test case
2) open a second tab and navigate to customize
3) switch back to the test case
4) switch to the customize tab
| Assignee | ||
Comment 10•10 years ago
|
||
Attachment #8649480 -
Flags: review?(roc) → review+
Comment 11•10 years ago
|
||
I can reproduce this on any page, just happened on newtab and bugzilla. Am I seeing a different issue here?
| Assignee | ||
Comment 12•10 years ago
|
||
(In reply to Trevor Rowbotham from comment #11)
> I can reproduce this on any page, just happened on newtab and bugzilla. Am
> I seeing a different issue here?
maybe. this can also be caused by a janked main thread, which can be caused by addons.
| Assignee | ||
Comment 13•10 years ago
|
||
merged to tip.
Attachment #8649480 -
Attachment is obsolete: true
Attachment #8649867 -
Flags: review?(jmathies)
| Assignee | ||
Updated•10 years ago
|
Keywords: checkin-needed
| Assignee | ||
Updated•10 years ago
|
Attachment #8649867 -
Flags: review?(jmathies) → review+
Comment 14•10 years ago
|
||
Application Basics
------------------
Name: Firefox
Version: 43.0a1
Build ID: 20150814004102
Update Channel: default
User Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:43.0) Gecko/20100101 Firefox/43.0
Multiprocess Windows: 1/1 (default: true)
Safe Mode: false
Crash Reports for the Last 3 Days
---------------------------------
All Crash Reports
Extensions
----------
Graphics
--------
Adapter Description: NVIDIA GeForce GTX 660
Adapter Drivers: nvd3dumx,nvwgf2umx,nvwgf2umx,nvwgf2umx nvd3dum,nvwgf2um,nvwgf2um,nvwgf2um
Adapter RAM: 2048
Asynchronous Pan/Zoom: wheel input enabled
Device ID: 0x11c0
Direct2D Enabled: true
DirectWrite Enabled: true (10.0.10240.16430)
Driver Date: 8-6-2015
Driver Version: 10.18.13.5560
GPU #2 Active: false
GPU Accelerated Windows: 1/1 Direct3D 11 (OMTC)
Subsys ID: 30693842
Supports Hardware H264 Decoding: true
Vendor ID: 0x10de
WebGL Renderer: Google Inc. -- ANGLE (NVIDIA GeForce GTX 660 Direct3D11 vs_5_0 ps_5_0)
windowLayerManagerRemote: true
AzureCanvasBackend: direct2d 1.1
AzureContentBackend: direct2d 1.1
AzureFallbackCanvasBackend: cairo
AzureSkiaAccelerated: 0
Important Modified Preferences
------------------------------
browser.cache.disk.capacity: 358400
browser.cache.disk.filesystem_reported: 1
browser.cache.disk.smart_size.first_run: false
browser.cache.frecency_experiment: 1
browser.download.importedFromSqlite: true
browser.places.smartBookmarksVersion: 7
browser.sessionstore.upgradeBackup.latestBuildID: 20150814004102
browser.startup.homepage_override.buildID: 20150814004102
browser.startup.homepage_override.mstone: 43.0a1
dom.apps.reset-permissions: true
dom.mozApps.used: true
extensions.lastAppVersion: 43.0a1
gfx.crash-guard.d3d11layers.appVersion: 43.0a1
gfx.crash-guard.d3d11layers.deviceID: 0x11c0
gfx.crash-guard.d3d11layers.driverVersion: 10.18.13.5560
gfx.crash-guard.d3d11layers.feature-d2d: true
gfx.crash-guard.d3d11layers.feature-d3d11: true
gfx.crash-guard.status.d3d11layers: 2
gfx.crash-guard.status.d3d9video: 2
gfx.direct3d.last_used_feature_level_idx: 0
media.gmp-eme-adobe.lastUpdate: 1439844069
media.gmp-eme-adobe.version: 12
media.gmp-gmpopenh264.lastUpdate: 1439844069
media.gmp-gmpopenh264.version: 1.4
media.gmp-manager.buildID: 20150814004102
media.gmp-manager.lastCheck: 1440008264
media.hardware-video-decoding.failed: false
network.cookie.prefsMigrated: true
network.predictor.cleaned-up: true
places.history.expiration.transient_current_max_pages: 104858
plugin.disable_full_page_plugin_for_types: application/pdf
plugin.importedState: true
privacy.sanitize.migrateFx3Prefs: true
security.sandbox.content.tempDirSuffix: {14394f73-1dd4-49ca-9702-b236f9d0858f}
security.sandbox.windows.log: true
Important Locked Preferences
----------------------------
JavaScript
----------
Incremental GC: true
Accessibility
-------------
Activated: false
Prevent Accessibility: 0
Library Versions
----------------
NSPR
Expected minimum version: 4.10.9 Beta
Version in use: 4.10.9 Beta
NSS
Expected minimum version: 3.20 Basic ECC
Version in use: 3.20 Basic ECC
NSSSMIME
Expected minimum version: 3.20 Basic ECC
Version in use: 3.20 Basic ECC
NSSSSL
Expected minimum version: 3.20 Basic ECC
Version in use: 3.20 Basic ECC
NSSUTIL
Expected minimum version: 3.20
Version in use: 3.20
Experimental Features
---------------------
| Assignee | ||
Comment 15•10 years ago
|
||
for testing, this work plus the work in bug 1137944:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=8b211d925042
Flags: needinfo?(smokey101stair)
Keywords: checkin-needed
Comment 17•10 years ago
|
||
Jim, in my normal nightly build, when this happens I can generally interact with the plugin and only sometimes do I get a ghost image of the plugin. However, with the build from comment 15, I was only able get a ghost image of the plugin to appear after switching tabs. The ghost image will go away if I scroll in both my regular nightly build and the build from comment 15, but when I am able to interact with the plugin in my normal nightly build, the plugin will stay on my screen until I switch back to the tab that contains that plugin. The build from comment 15 also had a tendency to go unresponsive when switching tabs. Here is a report from me forcing Firefox to crash when it, I suspect something was deadlocked:
bp-0efcf044-2b89-4bde-871b-f78fc2150819
Flags: needinfo?(smokey101stair) → needinfo?(jmathies)
| Assignee | ||
Comment 18•10 years ago
|
||
(In reply to Trevor Rowbotham from comment #17)
> Jim, in my normal nightly build, when this happens I can generally interact
> with the plugin and only sometimes do I get a ghost image of the plugin.
> However, with the build from comment 15, I was only able get a ghost image
> of the plugin to appear after switching tabs. The ghost image will go away
> if I scroll in both my regular nightly build and the build from comment 15,
> but when I am able to interact with the plugin in my normal nightly build,
> the plugin will stay on my screen until I switch back to the tab that
> contains that plugin. The build from comment 15 also had a tendency to go
> unresponsive when switching tabs. Here is a report from me forcing Firefox
> to crash when it, I suspect something was deadlocked:
>
> bp-0efcf044-2b89-4bde-871b-f78fc2150819
Great, this is useful. The ghost image is the painting problem in bug 1137944, the interactive plugin window in the wrong tab is *this* bug which appears to be fixed with the patch here.
Flags: needinfo?(jmathies)
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox43:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
| Assignee | ||
Updated•10 years ago
|
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•